fix: application create/get/list/del
